# TunNetGen

PureCPP/: CMakeLists.txt  Readme.md
PureCPP/src/: lidar.cpp  lidar.h  main.cpp  scene.cpp  scene.h  utils.cpp  utils.h  vec.cpp  vec.h  vec.ipp
WithModeller/: Readme.md  UI_a_couple_of_cylinders.py  UI_cylinder.py  UI_half_sphere.py  UI_intersecting_cylinders.py  UI_two_intersecting_cylinders.py  UI_unused_utils.py  UI_utils.py  argument_parser_helper.py  bmesh_cylinder.py  bmesh_half_sphere.py  bmesh_utils.py  cylinder_example.py  fail_sphere_cut.py  fusing_half_sphere_with_cylinder.py  requirements.txt  two_intersecting_cylinders_example.py
doc/Lyon_Fish_Bones/: Readme.md
docker/PureCPP/: Dockerfile  Readme.md
docker/WithModeller/: Dockerfile  Readme.md
